# levitas-pcb

./: .gitignore  CMakeLists.txt  readme.md
enclosure/: case_pcb_cover.DXF  case_pcb_cover_spacer.DXF  levitas_pcb_assembly-case.STL
firmware/: CMakeLists.txt  Makefile
firmware/src/: main.c  pio_i2c.h  pio_i2c.pio  test_fdc2112_i2c.c  test_max5715_spi.c  test_mpu6050_i2c.c
pcb/: readme.md
pcb/levitas/: fp-info-cache  fp-lib-table  high-voltage.dxf  levitas.kicad_pcb  levitas.kicad_prl  levitas.kicad_pro  levitas.kicad_sch  levitas.step  levitas_local_parts.bak  levitas_local_parts.kicad_sym  sym-lib-table
pcb/levitas/3d/: levitas-full.pcb3d  levitas.pcb3d
pcb/levitas/bsac_logo/: BSAC-3-color.eps  BSAC-outline.dxf  scum3c-devboard.net
pcb/levitas/cad/: pico.STEP  q025-5.STEP  stemma-mpu-6050.STEP  zif-socket.STEP
pcb/levitas/gerber/: levitas-B_Cu.gbr  levitas-B_Mask.gbr  levitas-B_Paste.gbr  levitas-B_Silkscreen.gbr  levitas-Edge_Cuts.gbr  levitas-F_Cu.gbr  levitas-F_Mask.gbr  levitas-F_Paste.gbr  levitas-F_Silkscreen.gbr  levitas-NPTH.drl  levitas-PTH.drl  levitas-job.gbrjob
pcb/levitas/levitas_local_footprints.pretty/: MPU-6050-breakout.kicad_mod  Q025-5C.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  ZIF_socket.kicad_mod
pcb/levitas_daughterboard/: fp-info-cache  fp-lib-table  levitas_custom.bak  levitas_custom.kicad_sym  levitas_daughterboard.kicad_pcb  levitas_daughterboard.kicad_prl  levitas_daughterboard.kicad_pro  levitas_daughterboard.kicad_sch  levitas_daughterboard.step  sym-lib-table
pcb/levitas_daughterboard/3d/: levitas_daughterboard-full.pcb3d  levitas_daughterboard.pcb3d
pcb/levitas_daughterboard/cad/: fdc2112.STEP
pcb/levitas_daughterboard/gerber/: levitas_daughterboard-B_Cu.gbr  levitas_daughterboard-B_Mask.gbr  levitas_daughterboard-B_Paste.gbr  levitas_daughterboard-B_Silkscreen.gbr  levitas_daughterboard-Edge_Cuts.gbr  levitas_daughterboard-F_Cu.gbr  levitas_daughterboard-F_Mask.gbr  levitas_daughterboard-F_Paste.gbr  levitas_daughterboard-F_Silkscreen.gbr  levitas_daughterboard-PTH.drl  levitas_daughterboard-job.gbrjob
pcb/levitas_daughterboard/levitas_local.pretty/: PinHeader_1x16_P2.54mm_Vertical.kicad_mod  WSON-12-1EP_4x4mm_P0.5mm_EP2.6x3mm.kicad_mod  cap_sensor.kicad_mod
src/: fdc2112_i2c.c  fdc2112_pio_i2c.c  i2c.c  main.c  mpu6050_i2c.c  pio_i2c.c  pio_i2c.h  pio_i2c.pio  spi.c  test.c  test.pio  test_fdc2112_i2c.c  test_fdc2112_pio_i2c.c  test_max5715_spi.c
utilities/: collect-data.py  graph-data.py
